# galileo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: concepts.h  main.cpp  utils.h  vector.h
